fix: responsive navbar for mobile (only logo + start now visible)

--- a/style.css
+++ b/style.css
@@ -409,10 +409,10 @@ body {
     width: 30%;
     margin: 0 auto;
     -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, #000 10%, #000 90%, rgba(0, 0, 0, 0) 100%);
-    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-repeat: repeat;
     -webkit-mask-size: 100% 100%;
     mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, #000 10%, #000 90%, rgba(0, 0, 0, 0) 100%);
-    mask-repeat: no-repeat;
+    mask-repeat: repeat;
     mask-size: 100% 100%;
 }
 
@@ -771,6 +771,16 @@ html {
     .hero p{
         font-size: 80%;
     }
+        .logo-slider{
+            width: 50%;
+            margin: 0 auto;
+                -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, #000 10%, #000 90%, rgba(0, 0, 0, 0) 100%);
+                -webkit-mask-repeat: repeat;
+                -webkit-mask-size: 100% 100%;
+                mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, #000 10%, #000 90%, rgba(0, 0, 0, 0) 100%);
+                mask-repeat: repeat;
+                mask-size: 100% 100%;
+        }
     .nav-links,
     .lang-dropdown {
         display: none !important;
